# portable-tool-demo

./: LICENSE  README.md  pyproject.toml
src/portable_tool/: developers.xml  main.py
