[project]
name = "portable-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel O. Delgado",email = "danielo.delgado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "portable_tool", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
